Demo bugs (#375)
* 2.6.5

* 2.6.6

* 2.6.7

* 2.6.8

* changing pathsInfo only if pathsInfo is present

* truncating path names with tooltip

* indentation

* condition input styling

--- a/components/CapCondition/_capCondition.scss
+++ b/components/CapCondition/_capCondition.scss
@@ -10,6 +10,11 @@ $capConditionNumber: cap-condition-number;
     appearance: none;
     margin: 0; 
   }
+
+  input.ant-input {
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
 }
 
 .cap-condition-wrapper {
